--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <div class="main-top">
       <h1>안녕하세요</h1>
       <h3>주니어 개발자 오정우입니다</h3>
-      <h3>꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다.</h3>
+      <h3>꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다</h3>
     </div>
     <div class="connect">
       <ul>
