--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
   <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square-neo.css" rel="stylesheet">
   <title>Document</title>
 </head>
+
 <body style="
   font-family: 'NanumSquareNeo';">
 
@@ -23,7 +24,7 @@
     <span>connect</span>
   </div>
   <div class="skill">
-    <h2>#skill</h2>
+    <span>#skill</span>
     <img src="" />
     <img src="" />
     <img src="" />
@@ -31,11 +32,7 @@
   </div>
   <div class="main">
     <ul>
-      <li>
-        <a href="#">
-          가나다라마바사아자차카타파하가나다라마바사아자차카타파하가나다라마바사아자차카타파하
-          가나다라마바사아자차카타파하가나다라마바사아자차카타파하가나다라마바사아자차카타파하</a>
-      </li>
+      <li><a href="#">ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ</li>
       <li><a href="#">text3</a></li>
       <li><a href="#">text4</a></li>
       <li><a href="#">text4</a></li>
