--- a/home.html
+++ b/home.html
@@ -17,8 +17,8 @@
     <span>PORTFOLIO</span>
   </div>
   <div class="introduce">
-    <span>주니어 개발자 오정우입니다.<br></span>
-    <span>꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다.</span>
+    주니어 개발자 오정우입니다.<br>
+    꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다.
   </div>
   <div class="connect">
     <span>connect</span>
