--- a/home.html
+++ b/home.html
@@ -20,15 +20,17 @@
     주니어 개발자 오정우입니다.<br>
     꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다.
   </div>
-  <div class="connect">
-    <span>connect</span>
-  </div>
+  <p>Skill</p>
   <div class="skill">
-    <span>#skill</span>
-    <img src="" />
-    <img src="" />
-    <img src="" />
-    <img src="" />
+    <img src="./image/Node.js_logo.svg" />
+    <img src="./image/HTML5_logo_and_wordmark.svg" />
+    <img src="./image/CSS3_logo_and_wordmark.svg" />
+    <img src="./image/MySQL_Dolphin.jpg" />
+  </div>
+  <div class="connect"><p>Connect</p><img src="./image/free-icon-phone-call-455907.png" /><span>010.2034.7513</span>
+    <img src="./image/Gmail_icon_(2020).svg" /><span>ojw000777@gmail.com</span>
+    <img src="./image/Font_Awesome_5_brands_github.svg" /><span>https://github.com/Jeongwoo0824</span>
+    
   </div>
   <div class="main">
     <ul>
