--- a/home.html
+++ b/home.html
@@ -20,27 +20,28 @@
     주니어 개발자 오정우입니다.<br>
     꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다.
   </div>
-  <p>Skill</p>
   <div class="skill">
     <img src="./image/Node.js_logo.svg" />
     <img src="./image/HTML5_logo_and_wordmark.svg" />
     <img src="./image/CSS3_logo_and_wordmark.svg" />
     <img src="./image/MySQL_Dolphin.jpg" />
   </div>
-  <div class="connect"><p>Connect</p><img src="./image/free-icon-phone-call-455907.png" /><span>010.2034.7513</span>
+  <!-- <div class="connect"><img src="./image/free-icon-phone-call-455907.png" /><span>010.2034.7513</span>
     <img src="./image/Gmail_icon_(2020).svg" /><span>ojw000777@gmail.com</span>
     <img src="./image/Font_Awesome_5_brands_github.svg" /><span>https://github.com/Jeongwoo0824</span>
     
-  </div>
+  </div> -->
   <div class="main">
-    <ul>
-      <li><a href="#">ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ</li>
-      <li><a href="#">text3</a></li>
-      <li><a href="#">text4</a></li>
-      <li><a href="#">text4</a></li>
-      <li><a href="#">text4</a></li>
-      <li><a href="#">text4</a></li>
-    </ul>
+      <ul>
+          <a href="#"><li><h1>스미싱 탐지 시스템</h1>
+      <h2>- 주요 업무 : Backend
+      - 담당 역할 : 계정 로그인 인증, 계정 정보 업데이트, 신고 기능 및 블랙리스트 관리
+      - 기술 스택 : Windows / Node.js(express), MySQL
+      - 업무 기간 : 2022.03 ~ 2022.09 (약 6개월)</h2>
+        </li>
+        <li><a href="#">text3</a></li>
+        <li><a href="#">text4</a></li>
+      </ul>
   </div>
 </body>
 
