--- a/home.html
+++ b/home.html
@@ -21,9 +21,9 @@
   </div>
   <div class="introduce">
     <div class="introduce_top">•&nbsp;Introduce</div>
-    <span class="connect">
-      <p>호서대학교
-        컴퓨터정보공학부 정보보호학 전공</p><span>Tel. 010 2034 7513
+    <span class="connect"><p>호서대학교
+        컴퓨터정보공학부 정보보호학 전공</p><div class="introduce_bottom">•&nbsp;Connect</div>
+        <span>Tel. 010 2034 7513
         Email. ojw000777@gmail.com
         GitHub. https://github.com/Jeongwoo0824</span>
   </div>
@@ -52,6 +52,8 @@
   </div>
 
   <div class="main">
+    <div class="main_head">
+      Project</div>
     <ul>
       <a href="#">
         <li>
@@ -60,7 +62,7 @@
             - 담당 역할 : 계정 로그인 인증, 계정 정보 업데이트, 신고 기능 및 블랙리스트 관리
             - 기술 스택 : Windows / Node.js(express), MySQL
             - 업무 기간 : 2022.03 ~ 2022.09 (약 6개월)</h2>
-        </li>
+        </li></a>
         <li><a href="#">text3</a></li>
         <li><a href="#">text4</a></li>
     </ul>
