--- a/home.html
+++ b/home.html
@@ -21,11 +21,10 @@
   </div>
   <div class="introduce">
     <div class="introduce_top">•&nbsp;Introduce</div>
-    <span class="connect"><p>호서대학교
-        컴퓨터정보공학부 정보보호학 전공</p><div class="introduce_bottom">•&nbsp;Connect</div>
-        <span>Tel. 010 2034 7513
-        Email. ojw000777@gmail.com
-        GitHub. https://github.com/Jeongwoo0824</span>
+    <span class="connect"><h2>호서대학교
+        컴퓨터정보공학부 정보보호학 전공</h2><div class="introduce_bottom">•&nbsp;Connect</div>
+        <p><span>Tel</span>&emsp;010 2034 7513</p><p><span>Email</span>&emsp;ojw000777@gmail.com</p><p><span>GitHub</span>&emsp;https://github.com/Jeongwoo0824</p>
+
   </div>
   <div class="skill">
     <div class="skill_top">•&nbsp;Skill</div>
@@ -33,19 +32,21 @@
       <div class="skill_tree">
         <p>Backend</p>
         <img src="./image/Node.js_logo.svg" />
+        <img src="./image/MySQL_Dolphin.jpg" />
       </div>
       <div class="skill_tree">
         <p>DevOps</p>
-        <img src="./image/MySQL_Dolphin.jpg" />
+        <img src="./image/Git-logo.svg">
       </div>
       <div class="skill_tree">
         <p>Frontend</p>
         <img src="./image/HTML5_logo_and_wordmark.svg" />
         <img src="./image/CSS3_logo_and_wordmark.svg" />
+        <img src="./image/Unofficial_JavaScript_logo_2.svg"/>
       </div>
       <div class="skill_tree">
         <p>Collaboration</p>
-        <img src="./image/Git-logo.svg">
+        <img src="./image/IntelliJ_IDEA_Icon.svg">
         <img src="./image/Visual_Studio_Code_1.35_icon.svg">
       </div>
     </div>
@@ -55,7 +56,7 @@
     <div class="main_head">
       Project</div>
     <ul>
-      <a href="#">
+      <a href="/senior.html">
         <li>
           <h1>스미싱 탐지 시스템</h1>
           <h2>- 주요 업무 : Backend
