--- a/home.html
+++ b/home.html
@@ -20,11 +20,16 @@
     꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다.
   </div>
   <div class="introduce">
-    <div class="introduce_top">•&nbsp;Introduce</div>
-    <span class="connect"><h2>호서대학교
-        컴퓨터정보공학부 정보보호학 전공</h2><div class="introduce_bottom">•&nbsp;Connect</div>
-        <p><span>Tel</span>&emsp;010 2034 7513</p><p><span>Email</span>&emsp;ojw000777@gmail.com</p><p><span>GitHub</span>&emsp;https://github.com/Jeongwoo0824</p>
-
+    <div class="introduce_top">•&nbsp;EDUCATION</div>
+    <h3>2017.03~2022.2</h3>
+    <h2>호서대학교
+      컴퓨터정보공학부 정보보호학 전공</h2>
+  </div>
+  <div class="contact">
+    <div class="introduce_bottom">•&nbsp;Connect</div>
+    <p><span>Tel</span>&emsp;010 2034 7513</p>
+    <p><span>Email</span>&emsp;ojw000777@gmail.com</p>
+    <p><span>GitHub</span>&emsp;https://github.com/Jeongwoo0824</p>
   </div>
   <div class="skill">
     <div class="skill_top">•&nbsp;Skill</div>
@@ -42,7 +47,7 @@
         <p>Frontend</p>
         <img src="./image/HTML5_logo_and_wordmark.svg" />
         <img src="./image/CSS3_logo_and_wordmark.svg" />
-        <img src="./image/Unofficial_JavaScript_logo_2.svg"/>
+        <img src="./image/Unofficial_JavaScript_logo_2.svg" />
       </div>
       <div class="skill_tree">
         <p>Collaboration</p>
@@ -63,9 +68,10 @@
             - 담당 역할 : 계정 로그인 인증, 계정 정보 업데이트, 신고 기능 및 블랙리스트 관리
             - 기술 스택 : Windows / Node.js(express), MySQL
             - 업무 기간 : 2022.03 ~ 2022.09 (약 6개월)</h2>
-        </li></a>
-        <li><a href="#">text3</a></li>
-        <li><a href="#">text4</a></li>
+        </li>
+      </a>
+      <li><a href="#">text3</a></li>
+      <li><a href="#">text4</a></li>
     </ul>
   </div>
 </body>
