--- a/home.html
+++ b/home.html
@@ -10,11 +10,11 @@
   <title>Document</title>
 </head>
 
+<header>
+    <h1>JEONGWOO_OH</h1>
+</header>
 <body style="
   font-family: 'NanumSquareNeo';">
-  <div class="main-top">
-    PORTFOLIO
-  </div>
   <div class="hello">
     주니어 개발자 오정우입니다.<br>
     꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다.
@@ -26,7 +26,7 @@
       컴퓨터정보공학부 정보보호학 전공</h2>
   </div>
   <div class="contact">
-    <div class="introduce_bottom">•&nbsp;Connect</div>
+    <div class="introduce_bottom">•&nbsp;CONTACT</div>
     <p><span>Tel</span>&emsp;010 2034 7513</p>
     <p><span>Email</span>&emsp;ojw000777@gmail.com</p>
     <p><span>GitHub</span>&emsp;https://github.com/Jeongwoo0824</p>
