--- a/home.html
+++ b/home.html
@@ -14,24 +14,26 @@
 <body style="
 font-family: 'NanumSquareNeo';">
 <header>
-  <h1>JEONGWOO_OH</h1>
+  <a href="/home.html"><h1>JEONGWOO_OH</h1></a>
 </header>
 
   <div class="hello">
-    주니어 개발자 오정우입니다.<br>
-    꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다.
+      주니어 개발자 오정우입니다.<br>
+      꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다.
   </div>
-  <div class="introduce">
-    <div class="introduce_top">•&nbsp;EDUCATION</div>
-    <h3>2017.03~2022.2</h3>
-    <h2>호서대학교
-      컴퓨터정보공학부 정보보호학 전공</h2>
-  </div>
-  <div class="contact">
-    <div class="introduce_bottom">•&nbsp;CONTACT</div>
-    <p><span>Tel</span>&emsp;010 2034 7513</p>
-    <p><span>Email</span>&emsp;ojw000777@gmail.com</p>
-    <p><span>GitHub</span>&emsp;https://github.com/Jeongwoo0824</p>
+  <div class="intro_contact">
+    <div class="introduce">
+      <div class="introduce_top">•&nbsp;EDUCATION</div>
+      <h3>2017.03~2022.2</h3>
+      <h2>호서대학교
+        컴퓨터정보공학부 정보보호학 전공</h2>
+    </div>
+    <div class="contact">
+      <div class="introduce_bottom">•&nbsp;CONTACT</div>
+      <p><span>Tel</span>&emsp;010 2034 7513</p>
+      <p><span>Email</span>&emsp;ojw000777@gmail.com</p>
+      <p><span>GitHub</span><a href="https://github.com/Jeongwoo0824">&emsp;https://github.com/Jeongwoo0824</a></p>
+    </div>
   </div>
   <div class="skill">
     <div class="skill_top">•&nbsp;Skill</div>
@@ -42,14 +44,14 @@ font-family: 'NanumSquareNeo';">
         <img src="./image/MySQL_Dolphin.jpg" />
       </div>
       <div class="skill_tree">
-        <p>DevOps</p>
-        <img src="./image/Git-logo.svg">
-      </div>
-      <div class="skill_tree">
         <p>Frontend</p>
         <img src="./image/HTML5_logo_and_wordmark.svg" />
         <img src="./image/CSS3_logo_and_wordmark.svg" />
         <img src="./image/Unofficial_JavaScript_logo_2.svg" />
+      </div>
+      <div class="skill_tree">
+        <p>DevOps</p>
+        <img src="./image/Git-logo.svg">
       </div>
       <div class="skill_tree">
         <p>Collaboration</p>
@@ -71,9 +73,14 @@ font-family: 'NanumSquareNeo';">
             - 기술 스택 : Windows / Node.js(express), MySQL
             - 업무 기간 : 2022.03 ~ 2022.09 (약 6개월)</h2>
         </li>
+        <li>
+          <h1>베이커리 홈페이지 제작</h1>
+          <h2>- 주요 업무 : Frontend, Backend
+            - 담당 역할 : 홈페이지 제작 및 게시판 기능
+            - 기술 스택 : Windows / HTML, CSS, JS, JSP, Oracle
+            - 업무 기간 : 2021.08 ~ 2021.11 (약 3개월)</h2>
+        </li>
       </a>
-      <li><a href="#">text3</a></li>
-      <li><a href="#">text4</a></li>
     </ul>
   </div>
 </body>
