--- a/home.html
+++ b/home.html
@@ -14,17 +14,18 @@
 <body style="
 font-family: 'NanumSquareNeo';">
 <header>
-  <a href="/home.html"><h1>JEONGWOO_OH</h1></a>
+  <a href="/home.html"><h1>JEONG WOO OH <br><span>PORTFOLIO</span></h1></a>
+  <div class="hello">
+    주니어 개발자 오정우입니다.<br>
+    꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다.
+</div>
 </header>
 
-  <div class="hello">
-      주니어 개발자 오정우입니다.<br>
-      꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다.
-  </div>
+  
   <div class="intro_contact">
     <div class="introduce">
       <div class="introduce_top">•&nbsp;EDUCATION</div>
-      <h3>2017.03~2022.2</h3>
+      <h3>2017.03 ~ 2023.2</h3>
       <h2>호서대학교
         컴퓨터정보공학부 정보보호학 전공</h2>
     </div>
@@ -68,10 +69,24 @@ font-family: 'NanumSquareNeo';">
       <a href="/senior.html">
         <li>
           <h1>스미싱 탐지 시스템</h1>
-          <h2>- 주요 업무 : Backend
-            - 담당 역할 : 계정 로그인 인증, 계정 정보 업데이트, 신고 기능 및 블랙리스트 관리
-            - 기술 스택 : Windows / Node.js(express), MySQL
-            - 업무 기간 : 2022.03 ~ 2022.09 (약 6개월)</h2>
+          <h2>코로나로 인한 방역지침이나 확진자추이 등을 미끼로 신종 사기 수법이 증가하고 있음에 정보취약계층의 보호와 범죄피해를 방지하기 위해 AI를 이용하여 스미싱 방지 기능을 탑재한 어플리케이션을 구현했습니다.
+            SMS검사의 경우 AI를 통해, URL검사의 경우 바이러스 토탈 API을 통해 URL유효성 검사, 네트워크 검사, 바이러스 검사 기능 등 처리결과를 반환합니다
+            
+            백엔드 개발언어로는 Node.js를 기반으로한 Express프레임워크를 이용하여 개발 편의성을 높이고 RestApi를 구현하였습니다.
+            데이터베이스는 MySql을 이용하고 단일 데이터 베이스를 이용했습니다.
+            <strong>
+              개발영역 :
+              JWT 토큰을 이용한 계정 로그인 인증
+              회원가입, 계정 삭제, 신고 누적 시 계정 정보 업데이트
+              신고 기능 및 신고 누적 시 블랙 리스트 기능 구현
+            </strong>
+            프로젝트 진행 시 팀원의 부재로 개발인원이 5명에서 2명으로 줄어 다소 어려움을 겪었지만 
+            그만큼 자기계발에 대한 집중과 개발언어에 대해 배울 수 있어 뜻 깊었습니다.
+            Node.js는 java 환경과 다르고 js기반의 언어라 생소한 부분이 많았지만
+            장단점이 뚜렷해 Node.js에 대해 관심이 감에 취업 또한 이쪽으로 하게 되었습니다. 
+            MySQL에 대해선 학업 중 깊게 공부하지 못하여 아쉬웠습니다.
+            이번 프로젝트를 통해 MySQL의 주요기능 중 하나인 프로시저와 트리거를 사용해볼 수 있는 계기가 되어 크게 만족하였습니다.
+            제가 직접 짠 쿼리들을 통해 원하는 데이터를 가져올 수 있으며 그 데이터를 관리할 수 있음에 SQL에 더 많은 관심을 가지게 되었습니다.</h2>
         </li>
         <li>
           <h1>베이커리 홈페이지 제작</h1>
