--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@ font-family: 'NanumSquareNeo';">
     &nbsp;
   </div>
   <div class="hello">
-    주니어 개발자 오정우입니다.<br>
+   주니어 개발자 오정우입니다.<br>
     꼼꼼한 성격과 시간 가는 줄 모르는 집중력이 저의 장점입니다.
 </div>
 </header>
@@ -72,32 +72,62 @@ font-family: 'NanumSquareNeo';">
       <a href="/senior.html">
         <li>
           <h1>스미싱 탐지 시스템</h1>
+          <h2>- 주요 업무 : Backend
+            - 기술 스택 : Windows / Node.js, MySQL
+            - 업무 기간 : 2022.03 ~ 2022.9 (약 6개월)</h2>
           <h2>코로나로 인한 방역지침이나 확진자추이 등을 미끼로 SMS를 통한 신종 사기 수법이 증가하고 있습니다.
             정보취약계층의 보호와 범죄피해를 방지하기 위해 이 어플리케이션을 개발하게 되었습니다.
             SMS의 경우 AI를 통해, URL의 경우 바이러스 토탈 API를 통해 스미싱 여부를 판단합니다.
             
-            백엔드 개발언어로는 Node.js를 기반으로한 Express프레임워크를 이용하여 개발 편의성을 높이고 RestApi를 구현하였습니다.
-            데이터베이스는 MySql을 사용하고 단일 데이터 베이스를 이용했습니다.
+            백엔드 개발언어로는 Node.js를 기반으로한 Express프레임워크를 이용하여 개발 편의성을 높이고 RestAPI를 구현하였습니다.
+            데이터베이스는 MySql을 사용하고 단일 데이터 베이스를 이용했습니다.</h2>
             <strong>
-              개발영역 :
-              JWT 토큰을 이용한 계정 로그인 인증
-              회원가입, 계정 삭제, 신고 누적 시 계정 정보 업데이트
-              신고 기능 및 신고 누적 시 블랙 리스트 기능 구현
+              &emsp;#JWT 토큰을 이용한 계정 로그인 인증
+              <h2>&emsp;POSTMAN 과 JWT(Json Web Token)을 사용하여 토큰 인증 방식의 로그인을 구현하였습니다.
+                &emsp;JWT의 단점 중 하나인 토큰탈취를 방지하기 위해 Access Token의 만료시간을 단축시켰으며
+                &emsp;짧아진 만료시간은 Refresh Token을 사용하여 보완하였습니다.</h2>
+
+                &emsp;#신고 기능 및 신고 누적 시 블랙 리스트 기능 구현
+              <h2>&emsp;REST API 와 MySQL 트리거를 사용한 스미싱 신고 및 블랙리스트 기능을 구현하였습니다.
+                &emsp;사용자가 스미싱 의심 SMS 신고 시 MySQL 트리거를 통해 신고 누적 수를 확인 후
+                &emsp;1일 이내 10건 이상 누적 시 블랙리스트 등록되는 기능입니다.
+                &emsp;블랙리스트 등록 시 앱 이용자에게 블랙리스트에 해당되는 계정정보(핸드폰 번호)로 문자가 오게되면 스미싱 경고문구가 나타납니다.
+                &emsp;뷰를 이용하여 블랙리스트에 등록된 스미싱 의심자의 PID, 전화번호, 신고사유를 쉽게 조회 및 사용할 수 있도록 구현하였습니다.</h2>
+
+                &emsp;#회원가입, 계정 삭제, 신고 누적 시 계정 정보 업데이트
+              <h2>&emsp;SQL 프로시저를 사용하여 사용자가 계정 생성이나 수정 또는 신고 누적시 계정정보(핸드폰 번호)를 조회해, 
+                &emsp;새로운 계정 생성 및 삭제하며 신고 누적된 블랙리스트 계정정보를 반환합니다.
+                &emsp;중복되는 계정이 있을 시 첫번째로 생성된 계정으로 업데이트됩니다.</h2>
             </strong>
-            프로젝트 진행 시 팀원의 부재로 개발인원이 5명에서 2명으로 줄어 다소 어려움을 겪었지만 
+          </li>
+            <!-- 프로젝트 진행 시 팀원의 부재로 개발인원이 5명에서 2명으로 줄어 다소 어려움을 겪었지만 
             그만큼 자기계발에 대한 집중과 개발언어에 대해 배울 수 있어 뜻 깊었습니다.
             Node.js는 java 환경과 다르고 js기반의 언어라 생소한 부분이 많았지만
             장단점이 뚜렷해 흥미가 생겨 취업 또한 이쪽으로 하게 되었습니다. 
             MySQL에 대해선 학업 중 깊게 공부하지 못하여 아쉬웠습니다.
             이번 프로젝트를 통해 MySQL의 주요기능 중 하나인 프로시저와 트리거를 사용해볼 수 있는 계기가 되어 크게 만족하였습니다.
-            제가 직접 짠 쿼리들을 통해 원하는 데이터를 가져올 수 있으며 그 데이터를 관리할 수 있음에 SQL에 더 많은 관심을 가지게 되었습니다.</h2>
-        </li>
+            제가 직접 짠 쿼리들을 통해 원하는 데이터를 가져올 수 있으며 그 데이터를 관리할 수 있음에 SQL에 더 많은 관심을 가지게 되었습니다.</h2> -->
+
         <li>
           <h1>베이커리 홈페이지 제작</h1>
           <h2>- 주요 업무 : Frontend, Backend
-            - 담당 역할 : 홈페이지 제작 및 게시판 기능
             - 기술 스택 : Windows / HTML, CSS, JS, JSP, Oracle
             - 업무 기간 : 2021.08 ~ 2021.11 (약 3개월)</h2>
+            <h2>웹프로그래밍 과목에 진행하였던 프로젝트입니다.
+              HTML, CSS, JS, JSP를 배운 후 자유주제를 통해 자신이 원하는 결과물을 만들어내는 프로젝트입니다.
+              평소에도 직접 간단한 홈페이지를 만들고 싶은 욕심이 있었고 기회라고 생각돼 진행하였습니다.
+              JS의 기능과 JDBC를 통한 게시판 기능을 구현해보았고 값진 경험이었습니다.
+            </h2>
+          <strong>
+            &emsp;#JS 이벤트 활용
+            <h2>JS Onclick 이벤트와 addEventListener를 이용하여 메뉴 클릭시 음식에 대한 각종 설명이 나타나도록 구현하였습니다.
+              간단한 음식 설명과 칼로리 등 소비자가 궁금할 수 있는 부분을 해소하였습니다.</h2>
+
+            &emsp;#JSP와 JDBC를 통한 게시판 기능
+            <h2>JSP와 JDBC 통하여 Oracle과 연동해 간단한 게시판 기능을 구현하였습니다.
+              게시판 등록 시 입력했던 비밀번호를 통해 해당 글을 삭제할 수 있습니다.
+            </h2>
+          </strong>
         </li>
       </a>
     </ul>
